# api-anything

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: claude_docs_benchmark.py
docs/: API_ANYTHING_ARCHITECTURE_V1.md  CLI_ANYTHING_PRINCIPLES_FOR_API_ANYTHING.md  MANIFEST_V1_SPEC.md  PERFORMANCE_OPTIMIZATION_2026-05-15.md
docs/plans/: 2026-05-15-api-anything-mvp.md  2026-05-15-api-anything-v1-runtime.md
examples/sites/claude-code-docs/: adapter.py  manifest.yaml
examples/sites/whatsapp-web/: adapter.py  docs.md  manifest.yaml
examples/sites/wikipedia/: adapter.py  docs.md  manifest.yaml
examples/sites/x-web/: adapter.py  docs.md  manifest.yaml
reports/benchmarks/: claude-docs-benchmark-20260515-152735.json  claude-docs-benchmark-20260515-152735.md  claude-docs-benchmark-latest.json  claude-docs-benchmark-latest.md
src/api_anything/: agent_native.py  cache.py  cli.py  discovery.py  hitl.py  models.py  registry.py  server.py
tests/: test_agent_native_cli.py  test_batch_cli.py  test_cache_index.py  test_claude_docs_adapter.py  test_claude_docs_performance_adapter.py  test_cli.py  test_discovery.py  test_registry.py  test_whatsapp_adapter.py  test_wikipedia_adapter.py  test_x_web_adapter.py
